# Radiomics

./: README.md  biasFieldCorrection.m  extractFeatures.py  information.m  intensityStandardization_.m  nib2mat.py  resampling.py  tool.py
tool/code/trunk/cxx/Classification/: CMakeLists.txt  ClassificationConfig.cmake.in  ClassificationOptions.h.in  UseClassification.cmake.in
tool/code/trunk/cxx/Classification/Core/: CMakeLists.txt
tool/code/trunk/cxx/Classification/Core/include/: ccipdClassifierBase.h  ccipdDAClassifier.h  ccipdLDAClassifier.h  ccipdProbabilisticClassifier.h  ccipdQDAClassifier.h  ccipdTrainableClassifier.h
tool/code/trunk/cxx/Classification/Core/source/: ccipdLDAClassifier.cxx  ccipdProbabilisticClassifier.cxx  ccipdQDAClassifier.cxx
tool/code/trunk/cxx/Classification/Core/test/: TestLDAClassification.cxx  TestQDAClassification.cxx  input.dcm
tool/code/trunk/cxx/Classification/Validation/: CMakeLists.txt
tool/code/trunk/cxx/Classification/Validation/include/: ccipdPrepareClassificationData.h
tool/code/trunk/cxx/Classification/Validation/projects/: Training - reduced.ini  Training.ini  ccipdGetOptimalFeatureSet.cxx
tool/code/trunk/cxx/Classification/Validation/source/: ccipdPrepareClassificationData.cxx
tool/code/trunk/cxx/Common/: CMakeLists.txt  CommonConfig.cmake.in  UseCommon.cmake.in
tool/code/trunk/cxx/Common/Core/: CMakeLists.txt
tool/code/trunk/cxx/Common/Core/include/: ccipdCloneable.h  ccipdCloneableFactory.h  ccipdCommon.h  ccipdCommonGroups.h  ccipdConcatenateParameters.h  ccipdCore.h  ccipdDisableWarningsMacro.h  ccipdEnableSharedFromThis.h  ccipdEnableWarningsMacro.h  ccipdFactory.h  ccipdFileTypes.h  ccipdITKForwardDeclarations.h  ccipdLandmarkTypes.h  ccipdMRITypes.h  ccipdMacros.h  ccipdMatrixSerialization.h  ccipdMeshTypes.h  ccipdRGBSliceTypes.h  ccipdSliceTypes.h  ccipdSplitParameters.h  ccipdTRUSTypes.h  ccipdUniqueValuesTypes.h  ccipdUnorderedMapSerialization.h  ccipdVTKForwardDeclarations.h  ccipdVectorIndexTypes.h  ccipdVolumeContainerToVolumeFeatures.h  ccipdVolumeTypes.h
tool/code/trunk/cxx/Common/Core/source/: ccipdConcatenateParameters.cxx  ccipdCore.cxx  ccipdMatrixSerialization.cxx  ccipdSplitParameters.cxx
tool/code/trunk/cxx/Common/Core/templates/: ccipdCloneable.hxx  ccipdCloneableFactory.hxx  ccipdConcatenateParameters.hxx  ccipdCopyable.hxx  ccipdEnableSharedFromThis.hxx  ccipdFactory.hxx  ccipdMatrixSerialization.hxx  ccipdSharedPointerSerialization.hxx
tool/code/trunk/cxx/Common/Hash/: CMakeLists.txt
tool/code/trunk/cxx/Common/Hash/include/: ccipdHashCollection.h  ccipdHashImage.h  ccipdHashImageIndex.h  ccipdHashLandmark.h  ccipdHashLandmarks.h  ccipdHashOptimizerParameters.h  ccipdHashable.h
tool/code/trunk/cxx/Common/Hash/source/: ccipdHashCollection.cxx  ccipdHashImage.cxx  ccipdHashImageIndex.cxx  ccipdHashLandmark.cxx  ccipdHashLandmarks.cxx  ccipdHashOptimizerParameters.cxx  ccipdHashable.cxx
tool/code/trunk/cxx/Common/Hash/templates/: ccipdHashCollection.hxx  ccipdHashImage.hxx  ccipdHashImageIndex.hxx  ccipdHashLandmark.hxx  ccipdHashLandmarks.hxx  ccipdHashOptimizerParameters.hxx
tool/code/trunk/cxx/Common/Images/: CMakeLists.txt
tool/code/trunk/cxx/Common/Images/include/: ccipdAddMissingSlicesToMask.h  ccipdBoundingBoxCoordinates.h  ccipdBoundingBoxCreation.h  ccipdBoundingBoxRandomization.h  ccipdConstVolume.h  ccipdCreateBinaryMask.h  ccipdCropImage.h  ccipdDilateImage.h  ccipdDuplicateImage.h  ccipdExtractFeatureImage.h  ccipdExtractMedialAxis.h  ccipdExtractUniqueValues.h  ccipdFlipImage.h  ccipdGetChannelByIndex.h  ccipdGetDiagonalDistance.h  ccipdGetLargestContiguousRegion.h  ccipdInsertImage.h  ccipdIntensityStandardization.h  ccipdLoadImage.h  ccipdLookupTablesTypes.h  ccipdMaskImage.h  ccipdMaskPixelValue.h  ccipdProcessLabels.h  ccipdRegionCube.h  ccipdRegionShape.h  ccipdRegionSphere.h  ccipdRgbToScalarImage.h  ccipdSampleImage.h  ccipdScalarToRgbImage.h  ccipdSetChannelByIndex.h  ccipdSliceVolumeConversion.h  ccipdSplitRegion.h  ccipdStandardizeImage.h  ccipdWriteImage.h
tool/code/trunk/cxx/Common/Images/projects/: ccipdExtractLabels.cxx  ccipdExtractManyLabels.cxx
tool/code/trunk/cxx/Common/Images/source/: ccipdAddMissingSlicesToMask.cxx  ccipdBoundingBoxCoordinates.cxx  ccipdBoundingBoxCreation.cxx  ccipdBoundingBoxRandomization.cxx  ccipdConstVolume.cxx  (+19 more)
tool/code/trunk/cxx/Common/Landmarks/: CMakeLists.txt
tool/code/trunk/cxx/Common/Math/: CMakeLists.txt
tool/code/trunk/cxx/Common/VTKConversion/: CMakeLists.txt
tool/code/trunk/cxx/Data/Evaluation/: CMakeLists.txt
tool/code/trunk/cxx/DimensionalityReduction/: CMakeLists.txt  DimensionalityReductionConfig.cmake.in  UseDimensionalityReduction.cmake.in  ccipdDimensionalityReductionOptions.h.in
tool/code/trunk/cxx/DimensionalityReduction/Core/: CMakeLists.txt
tool/code/trunk/cxx/DimensionalityReduction/SIM/: CMakeLists.txt
tool/code/trunk/cxx/Filtering/: CMakeLists.txt  FilteringConfig.cmake.in  UseFiltering.cmake.in
tool/code/trunk/cxx/Filtering/Core/: CMakeLists.txt
tool/code/trunk/cxx/Filtering/DCE/: CMakeLists.txt
tool/code/trunk/cxx/Filtering/FeatureCollection/: CMakeLists.txt
tool/code/trunk/cxx/GUI/: CMakeLists.txt  GUIConfig.cmake.in  UseGUI.cmake.in
tool/code/trunk/cxx/GUI/CaPView/: CMakeLists.txt
tool/code/trunk/cxx/GUI/Core/: CMakeLists.txt
tool/code/trunk/cxx/GUI/FEMRendering/: CMakeLists.txt
tool/code/trunk/cxx/GUI/ProstaCAD/: CMakeLists.txt
tool/code/trunk/cxx/GUI/ProstaFuse/: CMakeLists.txt
tool/code/trunk/cxx/GUI/Prostalign/: CMakeLists.txt
tool/code/trunk/cxx/GUI/RenderMFA/: CMakeLists.txt
tool/code/trunk/cxx/GUI/Segui/: CMakeLists.txt
tool/code/trunk/cxx/Preprocessing/: CMakeLists.txt  PreprocessingConfig.cmake.in  UsePreprocessing.cmake.in
tool/code/trunk/cxx/Preprocessing/Core/: CMakeLists.txt
tool/code/trunk/cxx/Segmentation/: CMakeGlue.txt  CMakeLists.txt  SegmentationConfig.cmake.in  UseSegmentation.cmake.in  ccipdSegmentationOptions.h.in
tool/code/trunk/cxx/Segmentation/Core/: CMakeLists.txt
tool/code/trunk/cxx/Segmentation/MFA/: CMakeLists.txt
(+1424 files in other folders)
